# tvsd_web

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CONTRIBUTORS.txt  LICENSE  Procfile  README.md  local.yml  manage.py  merge_production_dotenvs_in_dotenv.py  production.yml  pyproject.toml  vetur.config.js
.devcontainer/: devcontainer.json
.envs/.local/: .postgres
.github/workflows/: ci.yml
compose/production/django/: Dockerfile
compose/production/traefik/: traefik.yml
config/: api_router.py  asgi.py  celery_app.py  urls.py  websocket.py  wsgi.py
config/settings/: base.py  local.py  production.py  test.py
docs/: conf.py  howto.rst  index.rst  make.bat  users.rst
locale/en_US/LC_MESSAGES/: django.po
locale/fr_FR/LC_MESSAGES/: django.po
locale/pt_BR/LC_MESSAGES/: django.po
requirements/: base.txt
rewards/: views.py
rewards/templates/rewards/: list.html
tvsd_web/: conftest.py
tvsd_web/contrib/sites/migrations/: 0003_set_site_domain_and_name.py
tvsd_web/templates/: base.html
tvsd_web/users/: adapters.py  admin.py  apps.py  models.py  tasks.py  urls.py
tvsd_web/users/api/: serializers.py
tvsd_web/users/migrations/: 0001_initial.py
tvsd_web/users/tests/: test_admin.py  test_drf_urls.py  test_drf_views.py  test_forms.py  test_models.py  test_tasks.py  test_urls.py  test_views.py
vue_frontend/: package.json  vite.config.js
vue_frontend/src/: App.vue
vue_frontend/src/assets/: main.css
vue_frontend/src/components/: HelloWorld.vue  PointsStatus.vue  RewardClaim.vue  TheWelcome.vue
vue_frontend/src/components/icons/: IconTooling.vue
vue_frontend/src/stores/: reward.js
